--- a/src/style.scss
+++ b/src/style.scss
@@ -85,7 +85,8 @@ body {
 
         h3 {
           font-weight: 600;
-          font-size: 15px;
+          font-size: 13px;
+          padding: 0;
         }
 
         p {
